# dtr

./: .actrc  .gitignore  .gitmodules  00_START_HERE.md  ALL_SAY_METHODS_INTEGRATION_TEST.md  ARTIFACTS_CREATED.txt  AUDIT_FINDINGS.txt  AUDIT_INDEX.md  AUDIT_SUMMARY.md  BREAKING-CHANGES-2.0.0.md  BUILD_CACHE_IMPLEMENTATION.md  CACHE_SETUP_VERIFICATION.txt  CHANGELOG.md  CHANGELOG_2.0.0.md  CLAUDE.md  CLI_PRODUCTION_READINESS_EVALUATION.md  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT_2_0_0.md  COMPREHENSIVE_CHECK_COMPLETE.txt  CONSOLIDATION_SUMMARY.md  CONSOLIDATION_TEST_MAP.md  CONTRIBUTING.md  DIATAXIS_DOCUMENTATION.md  DOCUMENTATION-AUDIT-PRIORITY-5.md  DOCUMENTATION_DELIVERY_SUMMARY.txt  DOCUMENTATION_SUMMARY.txt  DOCUMENTATION_VERIFICATION_REPORT.md  DTR_API_AUDIT_REPORT.md  DocMetadataBenchmarkRunner.java  FILES_CREATED_SUMMARY.txt  FINAL_REPORT.md  FINAL_VERIFICATION_REPORT.md  GAP_REPORT.md  GeneratePhDThesisPDF.java  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JAVA_26_DEVELOPER_GUIDE.md  JAVA_26_JEPS_IMPLEMENTATION.md  JAVA_26_MIGRATION_SUMMARY.md  (+62 more)
doctester-cli/: .editorconfig  .gitignore  CONTRIBUTING.md  MAVEN_INTEGRATION_TEST_REPORT.md  PHASE_6C_RESULTS.md  README.md  UV_SETUP.md  pyproject.toml  requirements.txt  summary.md
doctester-cli/docs/: index.md
doctester-cli/docs/explanation/: architecture.md  best-practices.md  design-decisions.md  performance-guide.md  troubleshooting-philosophy.md
doctester-cli/docs/how-to/: README.md  batch-export.md  blog-publishing.md  formats.md  maven-integration.md  rich-content.md  troubleshooting.md
doctester-cli/docs/reference/: README.md  cli-commands.md  configuration.md  environment-variables.md  exit-codes.md  glossary.md
doctester-cli/docs/tutorials/: 01-getting-started.md  02-export-formats.md  03-maven-integration.md  04-blogging-workflow.md  README.md
doctester-cli/doctester_cli/: __init__.py  cli_errors.py  main.py  model.py
doctester-cli/doctester_cli/commands/: __init__.py  build.py  convert.py  export.py  fmt.py  manage.py  publish.py  push.py  report.py
doctester-cli/doctester_cli/converters/: base_converter.py  html_converter.py  json_converter.py  latex_converter.py  markdown_converter.py  pdf_converter.py
doctester-cli/doctester_cli/managers/: __init__.py  directory_manager.py  latex_manager.py  maven_manager.py  maven_publish_manager.py
doctester-cli/doctester_cli/publishers/: __init__.py  base_publisher.py  gcs_publisher.py  github_publisher.py  local_publisher.py  s3_publisher.py
doctester-cli/doctester_cli/reporters/: __init__.py  base_reporter.py  html_reporter.py  markdown_reporter.py  summary_reporter.py
doctester-cli/tests/: __init__.py  conftest.py  test_cli_build_command.py  test_cli_commands.py  test_cli_edge_cases.py  test_cli_errors.py  test_cli_export_latex_pdf.py  test_cli_export_workflows.py  test_cli_fault_tolerance.py  test_cli_maven_integration.py  test_cli_real_scenarios.py  test_cli_recovery.py  test_cli_robustness.py  test_cli_stress.py  test_cli_stress_concurrent.py  test_cli_stress_large_files.py  test_cli_validation.py  test_cli_workflows.py  test_converters.py  test_main.py  test_maven_integration.py  test_models.py  test_publish_command.py
dtr-cli/: .dtr.yml  CONTRIBUTING.md  MAVEN_INTEGRATION_TEST_REPORT.md  Makefile  PHASE_6C_RESULTS.md  README.md  UV_SETUP.md  pyproject.toml  requirements.txt  summary.md
dtr-cli/dtr_cli/: __init__.py  cli_errors.py  config.py  logging.py  main.py  model.py  state.py
dtr-cli/dtr_cli/commands/: __init__.py  build.py  diff.py  doctor.py  export.py  fmt.py  init.py  module.py  publish.py  push.py  report.py  schema.py  serve.py  template.py  test.py  watch.py
dtr-cli/dtr_cli/converters/: __init__.py  base_converter.py  html_converter.py  json_converter.py  latex_converter.py  markdown_converter.py  pdf_converter.py
dtr-cli/dtr_cli/managers/: __init__.py  directory_manager.py  latex_manager.py  maven_manager.py  maven_publish_manager.py
dtr-cli/dtr_cli/publishers/: base_publisher.py  gcs_publisher.py  github_publisher.py  local_publisher.py  s3_publisher.py
dtr-cli/dtr_cli/reporters/: __init__.py  base_reporter.py  html_reporter.py  markdown_reporter.py  summary_reporter.py
dtr-cli/tests/: __init__.py  conftest.py  test_build_command.py  test_cli_build_command.py  test_cli_commands.py  test_cli_commands_chicago.py  test_cli_error_codes.py  test_cli_export_latex_pdf.py  test_cli_integration.py  test_cli_maven_integration.py  test_cli_robustness.py  test_cli_stress.py  test_cli_validation.py  test_cli_workflows.py  test_config.py  test_converters.py  test_diff.py  test_doctor.py  test_doctor_command.py  test_errors.py  test_logging.py  test_main.py  test_managers.py  test_maven_integration.py  test_models.py  test_models_and_errors.py  test_module_command.py  test_nexus_api.py  test_publish_command.py  test_reporters.py  test_schema_command.py  test_serve_command.py  test_template_command.py  test_test_command.py  test_watch.py
scripts/rust/claude-code-toolkit/: AUDIT_SCANNER_PHASE2.md  Cargo.toml  PHASE_2_SUMMARY.txt  RELEASE_CHECKLIST.md
scripts/rust/claude-code-toolkit/cct/: Cargo.toml
scripts/rust/claude-code-toolkit/cct-facts/: Cargo.toml
scripts/rust/claude-code-toolkit/cct-facts/src/: lib.rs
scripts/rust/claude-code-toolkit/cct-git/: Cargo.toml
scripts/rust/claude-code-toolkit/cct-git/src/: lib.rs
scripts/rust/claude-code-toolkit/cct-hooks/: Cargo.toml
scripts/rust/claude-code-toolkit/cct-hooks/src/: lib.rs
scripts/rust/claude-code-toolkit/cct-patterns/: Cargo.toml
scripts/rust/claude-code-toolkit/cct-pipeline/: Cargo.toml
scripts/rust/claude-code-toolkit/patterns/: java.toml  rust.toml
scripts/rust/dtr-guard/: Cargo.toml
scripts/rust/dtr-guard/src/: lib.rs  main.rs
scripts/rust/dtr-javadoc/: Cargo.toml  REFACTORING_REPORT.md
scripts/rust/dtr-javadoc/src/: error.rs  extractor.rs  lib.rs  main.rs  model.rs  parser.rs  render.rs  util.rs  validator.rs
scripts/rust/dtr-observatory/: Cargo.toml
scripts/rust/dtr-observatory/src/: lib.rs  main.rs
(+940 files in other folders)
