[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctester-cli"
version = "0.1.0"
description = "Python CLI to manage DocTester exports, conversions, and publishing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "DocTester Contributors", email = "info@doctester.org"}
]
keywords = ["doctester", "documentation", "testing", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Documentation",
]
dependencies = [
    "typer[all]>=0.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "google-cloud-storage>=2.10.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "pathvalidate>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.2.0",
    "mypy>=1.7.0",
]
aws = ["boto3>=1.34.0"]
gcs = ["google-cloud-storage>=2.10.0"]
all = [
    "boto3>=1.34.0",
    "google-cloud-storage>=2.10.0",
]

[project.urls]
Homepage = "https://github.com/seanchatmangpt/doctester"
Documentation = "https://github.com/seanchatmangpt/doctester/tree/master/doctester-cli"
Repository = "https://github.com/seanchatmangpt/doctester"
"Bug Tracker" = "https://github.com/seanchatmangpt/doctester/issues"

[project.scripts]
dtr = "doctester_cli.main:main"
doctester = "doctester_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["doctester_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-select = [
    "I",      # isort - import sorting
    "UP",     # pyupgrade
    "RUF",    # ruff specific rules
    "SIM",    # simplify
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-v",
    "--cov=doctester_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["doctester_cli"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
