[workspace]
members = [
    "cct-hooks",
    "cct-git",
    "cct-patterns",
    "cct-facts",
    "cct-pipeline",
    "cct",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
walkdir = "2"
blake3 = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
