[workspace]
members = [
    "cct-hooks",
    "cct-git",
    "cct-patterns",
    "cct-facts",
    "cct-pipeline",
    "cct",
    "crates/scanner",
    "crates/cache",
    "crates/remediate",
    "crates/oracle",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
walkdir = "2"
blake3 = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
aho-corasick = "1.1"
memchr = "2.7"
tree-sitter = "0.26"
tree-sitter-java = "0.23"
ignore = "0.4"
memmap2 = "0.9"
globset = "0.4"
bstr = "1"
rayon = "1"
smartcore = "0.4"
ordered-float = "4"
