[package]
name = "dtr-guard"
version = "0.1.0"
edition = "2021"
description = "H-Guard enforcement scanner for DTR Java projects — blocks semantic lies at write time"

[lib]
name = "dtr_guard"
path = "src/lib.rs"

[[bin]]
name = "dtr-guard-scan"
path = "src/main.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
