[package]
name = "dtr-javadoc"
version = "0.1.0"
edition = "2024"

[lib]
name = "dtr_javadoc"
path = "src/lib.rs"

[[bin]]
name = "dtr-javadoc"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26"
tree-sitter-java = "0.23"
tree-sitter-javadoc = "0.2.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
rayon = "1"
anyhow = "1"
