[package]
name = "dtr-observatory"
version = "0.1.0"
edition = "2021"
description = "DTR Observatory — compact JSON codebase facts for agent consumption"

[lib]
name = "dtr_observatory"
path = "src/lib.rs"

[[bin]]
name = "dtr-observe"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
anyhow = "1"
