[package]
name = "cct"
version = "0.1.0"
edition = "2021"
description = "Claude Code Toolkit — cct scan | cct observe | cct dx | cct hook"
rust-version = "1.70"

[[bin]]
name = "cct"
path = "src/main.rs"

[dependencies]
cct-hooks = { path = "../cct-hooks" }
cct-git = { path = "../cct-git" }
cct-patterns = { path = "../cct-patterns" }
cct-facts = { path = "../cct-facts" }
cct-pipeline = { path = "../cct-pipeline" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
