[package]
name = "cct-cache"
version = "0.1.0"
edition = "2021"
description = "Content-addressed cache layer using redb + blake3 for H-Guard scanner results"

[dependencies]
redb = "2.1"
blake3 = "1"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bincode = "1.3"

[dev-dependencies]
tempfile = "3"
cct-scanner = { path = "../scanner" }
