[package]
name = "cct-cache"
version = "0.1.0"
edition = "2021"
description = "Content-addressed cache layer using redb + blake3 for H-Guard scanner results"
rust-version = "1.70"

[[bench]]
name = "cache"
harness = false

[dependencies]
redb = "2.1"
blake3 = "1"
dashmap = "5.5"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
bincode = "1.3"
rayon = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
