[package]
name = "cct-cli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for cct-scanner with oracle prioritization, cache dedup, and remediation — integrates all 4 scanner layers"

[[bin]]
name = "cct"
path = "src/main.rs"

[dependencies]
cct-scanner = { path = "../scanner" }
cct-cache = { path = "../cache" }
cct-oracle = { path = "../oracle" }
cct-remediate = { path = "../remediate" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
