[package]
name = "cct-cli"
version = "0.1.0"
edition = "2021"
description = "Unified CLI for cct-scanner with oracle prioritization, cache dedup, and remediation — integrates all 4 scanner layers"
rust-version = "1.70"

[[bin]]
name = "cct"
path = "src/main.rs"

[dependencies]
cct-scanner = { path = "../scanner" }
cct-cache = { path = "../cache" }
cct-oracle = { path = "../oracle" }
cct-remediate = { path = "../remediate" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
clap-noun-verb = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rayon = { workspace = true }

[[bench]]
name = "latency"
path = "benches/latency.rs"
harness = false

[[bench]]
name = "end_to_end"
path = "benches/end_to_end.rs"
harness = false

[[bench]]
name = "allocation_profile"
path = "benches/allocation_profile.rs"
harness = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
